@@ -31,6 +31,10 @@
 	* include/set-hooks.h (RUN_HOOK): Revert 2000-06-26 mods.  Qualify
 	ptr as __unbouned.
 
+	* Makerules (o-objects): Supplement with $(o-objects$o).
+	* string/Makefile (o-objects.ob): Add variable to pull
+	unbounded versions of memcpy, memset and memchr into libc_b.
+
 2000-07-17  Bruno Haible  <haible@clisp.cons.org>
 
 	* iconv/gconv_open.c (__gconv_open): Initialize the __data
